Resolve deprecations and tie version within window title to whatever gradle sets; and update module-info